# Eco-sim

./: CMakeLists.txt  README.md  build_debug.sh
cmake/: CompileOptions.cmake
data/: resources.json
data/recipes/: wood.json
src/: main.cpp
src/components/: Inventory.hpp  Population.hpp  PriceBook.hpp  ProductionRecipe.hpp  Resource.hpp
src/core/: World.hpp
src/data/: RecipeLoader.cpp  ResourceLoader.cpp
src/systems/: ConsumptionSystem.hpp  MarketSystem.hpp  PopulationSystem.hpp  ProductionSystem.hpp
